DevOps-Trainee-Course/Module-6/Task_2.8/kubernetes/eks/clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: clusterip
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
  selector:
    task: ingress
